<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="review"
            type="br.com.luisfelipeas5.givemedetails.model.model.reviews.Review"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/txt_author"
            android:text="@{review.author}"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            tools:text="Luis Felipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/txt_content"
            android:text="@{review.content}"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:maxLines="3"
            android:ellipsize="end"
            tools:text="@string/lorem_ipsum"
            app:layout_constraintTop_toBottomOf="@id/txt_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>
</layout>